src/components/FontDropdownSelector/FontDropdownSelector.module.css
.fontSelector {
    display: flex;
    align-items: center;
    gap: 1.125em;

    background-color: inherit;
    font-weight: bold;
    font-size: 1.125rem;
    border: none;
    color: var(--text-primary)
}

@media screen and (max-width: 767px) {
    .fontSelector {
        font-size: 0.875rem;
    }
}

.fontsList {
    display: none;
    z-index: 2;
    position: absolute;
    top: 45px;
    right: 135px;
    min-width: 11.4em;


    background-color: var(--dropdown-primary);
    border-radius: 16px;
    box-shadow: var(--dropdown-shadow);
    padding: 24px;
}

.fontsList li:not(:last-child) {
    margin-bottom: 1em;
}

.fontsList li {
    cursor: pointer;
    font-weight: bold;
}

.fontsList li:hover {
    color: var(--accent)
}

